--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "moment": "^2.30.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-camera-pro": "^1.4.0",
+    "react-dom": "^18",
+    "react-html5-camera-photo": "^1.5.11"
   },
   "devDependencies": {
     "@zxing/library": "^0.21.3",
